fixing display issues, no profile match check yet

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -30,7 +30,11 @@
         <div class="container">
           <p>
             <a href="/api/friends">API Friends List</a> |
-            <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
+            <a href="https://github.com/jpimentel45/FriendFinder"
+              >GitHub Repo</a
+            >
+            |
+            <a href="/profiles">Profiles</a>
           </p>
         </div>
       </footer>
