--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -164,7 +164,9 @@
           <div class="container">
             <p>
               <a href="/api/friends">API Friends List</a> |
-              <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
+              <a href="https://github.com/jpimentel45/FriendFinder"
+                >GitHub Repo</a
+              >
             </p>
           </div>
         </footer>
@@ -183,11 +185,7 @@
             </div>
             <div class="modal-body">
               <h2 id="match-name"></h2>
-              <img
-                id="match-img"
-                src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg"
-                alt=""
-              />
+              <img id="match-img" src="" alt="" />
             </div>
             <div class="modal-footer">
               <button
