--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -158,7 +158,6 @@
         <button type="submit" class="btn" id="submit">
           <i class="fa fa-check-circle" aria-hidden="true"></i> Submit
         </button>
-
         <hr />
         <footer class="footer">
           <div class="container">
@@ -167,6 +166,8 @@
               <a href="https://github.com/jpimentel45/FriendFinder"
                 >GitHub Repo</a
               >
+              |
+              <a href="/profiles">Profiles</a>
             </p>
           </div>
         </footer>
